@@ -14,7 +14,6 @@ D/wmlscript////
 /.cvsignore/1.7/Fri Nov 11 17:29:59 2005//
 /AUTHORS/1.9/Fri Nov 11 16:58:28 2005//
 /COPYING/1.2/Fri Nov 11 16:58:31 2005//
-/ChangeLog/1.2719/Tue Jan 10 11:56:27 2006//
 /INSTALL/1.2/Fri Nov 11 16:58:31 2005//
 /LICENSE/1.5/Fri Nov 11 16:58:32 2005//
 /Makefile.in/1.77/Tue Jan 10 11:53:43 2006//
@@ -31,3 +30,4 @@ D/wmlscript////
 /install-sh/1.2/Fri Nov 11 16:58:36 2005//
 /missing/1.1/Fri Nov 11 16:58:35 2005//
 /mkinstalldirs/1.1/Fri Nov 11 16:58:32 2005//
+/ChangeLog/1.2721/Tue Jan 10 17:02:53 2006//
