@@ -3,9 +3,7 @@
 /smasi_pdu.c/1.6/Fri Nov 11 16:58:36 2005//
 /smasi_pdu.def/1.4/Fri Nov 11 16:58:36 2005//
 /smasi_pdu.h/1.4/Fri Nov 11 16:58:36 2005//
-/smpp_pdu.c/1.23/Fri Nov 11 17:30:01 2005//
 /smpp_pdu.def/1.9/Fri Nov 11 16:58:36 2005//
-/smpp_pdu.h/1.11/Fri Nov 11 16:58:36 2005//
 /smpp_pdu_opt.def/1.5/Fri Nov 11 16:58:36 2005//
 /smsc.c/1.8/Fri Nov 11 16:58:36 2005//
 /smsc.h/1.4/Fri Nov 11 16:58:36 2005//
@@ -27,4 +25,6 @@
 /smsc_smpp.c/1.85/Tue Jan 10 11:53:56 2006//
 /smsc_soap.c/1.16/Fri Nov 11 17:30:01 2005//
 /smsc_wrapper.c/1.8/Fri Nov 11 16:58:36 2005//
+/smpp_pdu.c/1.24/Tue Jan 10 17:03:17 2006//
+/smpp_pdu.h/1.12/Tue Jan 10 16:59:41 2006//
 D
