@@ -161,24 +161,67 @@ enum SMPP_ERROR_MESSAGES {
     SMPP_ESME_RINVCMDID = 0x00000003,
     SMPP_ESME_RINVBNDSTS = 0x00000004,
     SMPP_ESME_RALYNBD = 0x00000005,
+    SMPP_ESME_RINVPRTFLG = 0x00000006,
     SMPP_ESME_RINVREGDLVFLG = 0x00000007,
     SMPP_ESME_RSYSERR = 0x00000008,
     SMPP_ESME_RINVSRCADR = 0x0000000A,
     SMPP_ESME_RINVDSTADR = 0x0000000B,
+    SMPP_ESME_RINVMSGID = 0x0000000C,
     SMPP_ESME_RBINDFAIL = 0x0000000D,
     SMPP_ESME_RINVPASWD = 0x0000000E,
     SMPP_ESME_RINVSYSID = 0x0000000F,
+    SMPP_ESME_RCANCELFAIL = 0x00000011,
+    SMPP_ESME_RREPLACEFAIL = 0x00000013,
     SMPP_ESME_RMSGQFUL   = 0x00000014,
+    SMPP_ESME_RINVSERTYP = 0x00000015,
+    SMPP_ESME_RINVNUMDESTS = 0x00000033,
+    SMPP_ESME_RINVDLNAME = 0x00000034,
+    SMPP_ESME_RINVDESTFLAG = 0x00000040,
+    SMPP_ESME_RINVSUBREP = 0x00000042,
     SMPP_ESME_RINVESMCLASS = 0x00000043,
+    SMPP_ESME_RCNTSUBDL = 0x00000044,
+    SMPP_ESME_RSUBMITFAIL = 0x00000045,
     SMPP_ESME_RINVSRCTON = 0x00000048,
+    SMPP_ESME_RINVSRCNPI = 0x00000049,
+    SMPP_ESME_RINVDSTTON = 0x00000050,
+    SMPP_ESME_RINVDSTNPI = 0x00000051,
+    SMPP_ESME_RINVSYSTYP = 0x00000053,
+    SMPP_ESME_RINVREPFLAG = 0x00000054,
+    SMPP_ESME_RINVNUMMSGS = 0x00000055,
     SMPP_ESME_RTHROTTLED = 0x00000058,
     SMPP_ESME_RINVSCHED = 0x00000061,
     SMPP_ESME_RINVEXPIRY = 0x00000062,
+    SMPP_ESME_RINVDFTMSGID = 0x00000063,
     SMPP_ESME_RX_T_APPN = 0x00000064,
     SMPP_ESME_RX_P_APPN = 0x00000065,
     SMPP_ESME_RX_R_APPN = 0x00000066,
-    SMPP_ESME_ROPTPARNOTALLWD = 0x000000C1,
-    SMPP_ESME_RUNKNOWNERR = 0x000000FF
+    SMPP_ESME_RQUERYFAIL = 0x00000067,
+    SMPP_ESME_RINVTLVSTREAM = 0x000000C0,
+    SMPP_ESME_RTLVNOTALLWD = 0x000000C1,
+    SMPP_ESME_RINVTLVLEN = 0x000000C2,
+    SMPP_ESME_RMISSINGTLV = 0x000000C3,
+    SMPP_ESME_RINVTLVVAL = 0x000000C4,
+    SMPP_ESME_RDELIVERYFAILURE = 0x000000FE,
+    SMPP_ESME_RUNKNOWNERR = 0x000000FF,
+    SMPP_ESME_RSERTYPUNAUTH = 0x00000100,
+    SMPP_ESME_RPROHIBITED = 0x00000101,
+    SMPP_ESME_RSERTYPUNAVAIL = 0x00000102,
+    SMPP_ESME_RSERTYPDENIED = 0x00000103,
+    SMPP_ESME_RINVDCS = 0x00000104,
+    SMPP_ESME_RINVSRCADDRSUBUNIT = 0x00000105,
+    SMPP_ESME_RINVDSTADDRSUBUNIT = 0x00000106,
+    SMPP_ESME_RINVBCASTFREQINT = 0x00000107,
+    SMPP_ESME_RINVBCASTALIAS_NAME = 0x00000108,
+    SMPP_ESME_RINVBCASTAREAFMT = 0x00000109,
+    SMPP_ESME_RINVNUMBCAST_AREAS = 0x0000010A,
+    SMPP_ESME_RINVBCASTCNTTYPE = 0x0000010B,
+    SMPP_ESME_RINVBCASTMSGCLASS = 0x0000010C,
+    SMPP_ESME_RBCASTFAIL = 0x0000010D,
+    SMPP_ESME_RBCASTQUERYFAIL = 0x0000010E,
+    SMPP_ESME_RBCASTCANCELFAIL = 0x0000010F,
+    SMPP_ESME_RINVBCAST_REP = 0x00000110,
+    SMPP_ESME_RINVBCASTSRVGRP = 0x00000111,
+    SMPP_ESME_RINVBCASTCHANIND = 0x00000112,
 };
 
 SMPP_PDU *smpp_pdu_create(unsigned long type, unsigned long seq_no);
